--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Realtime Chat App</title>
+    <title>ChatMe </title>
+    <link rel="icon" href="https://cdn3.iconfinder.com/data/icons/social-media-chat-1/512/AppMe-512.png" height="32" width="32" />
   </head>
   <body>
     <div id="root"></div>
